--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,9 @@ configurations {
     compileOnly {
         extendsFrom annotationProcessor
     }
+    all {
+        exclude module: 'spring-boot-starter-logging'
+    }
 }
 
 repositories {
@@ -27,8 +30,10 @@ ext {
 }
 
 dependencies {
-    implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
+    compile "org.springframework.boot:spring-boot-starter-webflux",
+            "org.springframework.cloud:spring-cloud-starter-gateway"
     compileOnly 'org.projectlombok:lombok'
+    compile 'org.springframework.boot:spring-boot-starter-log4j2'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
