--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -4,8 +4,8 @@ ARG SPRING_PROFILE=dev
 ARG BASE_URI=http://uaa:8080
 ARG URI=/oauth/token
 ARG ROUTE_URI=http://resource-server:8081
-ARG CLIENT_ID=clientID
-ARG CLIENT_SECRET=clientSecret
+ARG CLIENT_ID=login-client
+ARG CLIENT_SECRET=secret
 ARG PORT=8090
 ARG HTTP_METHOD=POST
 ARG PROVIDER=uaa
@@ -22,14 +22,6 @@ ENV HTTP_METHOD_ENV=$HTTP_METHOD
 ENV PROVIDER_ENV=$PROVIDER
 ENV GRANT_TYPE_ENV=$GRANT_TYPE
 
+COPY entrypoint.sh /entrypoint.sh
 COPY ${JAR_FILE} app.jar
-ENTRYPOINT ["java","-Dspring.profiles.active=${SPRING_PROFILE_ENV}",\
-            "-Dserver.port=${PORT_ENV}",\
-            "-Dcom.finleap.solarisgateway.auth.${PROVIDER_ENV}.baseuri=${BASE_URI_ENV}",\
-            "-Dcom.finleap.solarisgateway.auth.${PROVIDER_ENV}.uri=${URI_ENV}",\
-            "-Dcom.finleap.solarisgateway.uri=${ROUTE_URI_ENV}",\
-            "-Dcom.finleap.solarisgateway.auth.${PROVIDER_ENV}.clientid=${CLIENT_ID_ENV}",\
-            "-Dcom.finleap.solarisgateway.auth.${PROVIDER_ENV}.clientsecret=${CLIENT_SECRET_ENV}",\
-            "-Dcom.finleap.solarisgateway.auth.${PROVIDER_ENV}.httpmethod=${HTTP_METHOD_ENV}",\
-            "-Dcom.finleap.solarisgateway.auth.${PROVIDER_ENV}.granttype=${GRANT_TYPE_ENV}",\
-            "-jar","/app.jar"]
+ENTRYPOINT ["/entrypoint.sh"]
