--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -31,9 +31,10 @@ ext {
 
 dependencies {
     compile "org.springframework.boot:spring-boot-starter-webflux",
-            "org.springframework.cloud:spring-cloud-starter-gateway"
+            "org.springframework.cloud:spring-cloud-starter-gateway",
+            "org.springframework.boot:spring-boot-starter-log4j2",
+            "org.springframework.boot:spring-boot-starter-actuator"
     compileOnly 'org.projectlombok:lombok'
-    compile 'org.springframework.boot:spring-boot-starter-log4j2'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
