--- a/resource-server/build.gradle
+++ b/resource-server/build.gradle
@@ -40,6 +40,7 @@ ext['springCloudVersion'] = 'Greenwich.RC2'
 
 dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-web')
+	implementation('org.springframework.boot:spring-boot-actuator')
 	implementation('org.springframework.cloud:spring-cloud-starter-oauth2')
 	compileOnly 'org.projectlombok:lombok'
 	compile 'org.springframework.boot:spring-boot-starter-log4j2'
