--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,10 @@
 stages:
-  - jar
   - build
+  - test
 
 jar_gateway:
   image: openjdk:11
-  stage: jar
+  stage: build
   script:
     - ./gradlew bootJar
   artifacts:
@@ -19,6 +19,9 @@ build_docker_compose:
   before_script:
     - docker info
     - docker-compose --version
-  stage: build
+  stage: test
   script:
-    - docker-compose up -d --build
+    - docker-compose -f integration-tests/docker-compose.yml build --no-cache
+    - docker-compose -f integration-tests/docker-compose.yml up --abort-on-container-exit
+  after_script:
+    - docker-compose -f integration-tests/docker-compose.yml logs >& logs.txt
