fix after master merge

--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -10,6 +10,7 @@ ARG PORT=8090
 ARG HTTP_METHOD=POST
 ARG PROVIDER=uaa
 ARG GRANT_TYPE=client_credentials
+ARG PREFIX=/solaris/
 
 ENV SPRING_PROFILE_ENV=$SPRING_PROFILE
 ENV BASE_URI_ENV=$BASE_URI
@@ -21,6 +22,7 @@ ENV PORT_ENV=$PORT
 ENV HTTP_METHOD_ENV=$HTTP_METHOD
 ENV PROVIDER_ENV=$PROVIDER
 ENV GRANT_TYPE_ENV=$GRANT_TYPE
+ENV PREFIX_ENV=$PREFIX
 
 COPY entrypoint.sh /entrypoint.sh
 COPY ${JAR_FILE} app.jar
