--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -10,7 +10,7 @@ ARG PORT=8090
 ARG HTTP_METHOD=POST
 ARG PROVIDER=uaa
 ARG GRANT_TYPE=client_credentials
-ARG PREFIX=/solaris/
+ARG PREFIX=/uaa/
 
 ENV SPRING_PROFILE_ENV=$SPRING_PROFILE
 ENV BASE_URI_ENV=$BASE_URI
