--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -41,4 +41,5 @@ management:
   endpoints:
     web:
       exposure:
-        include: health,threaddump,metrics,gateway,info,heapdump
+        include: health,threaddump,metrics,gateway,info,heapdump,prometheus
+
