--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -33,10 +33,11 @@ ext {
 }
 
 dependencies {
-    compile 'org.springframework.boot:spring-boot-starter-webflux',
-            'org.springframework.cloud:spring-cloud-starter-gateway',
-            'org.springframework.boot:spring-boot-starter-log4j2',
-            'org.springframework.boot:spring-boot-starter-actuator'
+    compile "org.springframework.boot:spring-boot-starter-webflux",
+            "org.springframework.cloud:spring-cloud-starter-gateway",
+            "org.springframework.boot:spring-boot-starter-log4j2",
+            "org.springframework.boot:spring-boot-starter-actuator",
+            "io.micrometer:micrometer-registry-prometheus"
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
