--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -20,7 +20,6 @@ configurations {
         // spring default logging dependencies are removed from classpath to use log4j2 and slf4j
         exclude module: 'spring-boot-starter-logging'
         exclude module: 'logback-classic'
-
     }
 }
 
@@ -33,11 +32,12 @@ ext {
 }
 
 dependencies {
-    compile "org.springframework.boot:spring-boot-starter-webflux",
-            "org.springframework.cloud:spring-cloud-starter-gateway",
-            "org.springframework.boot:spring-boot-starter-log4j2",
-            "org.springframework.boot:spring-boot-starter-actuator",
-            "io.micrometer:micrometer-registry-prometheus"
+    compile 'org.springframework.boot:spring-boot-starter-webflux',
+            'org.springframework.cloud:spring-cloud-starter-gateway',
+            'org.springframework.boot:spring-boot-starter-log4j2',
+            'org.springframework.boot:spring-boot-starter-actuator',
+            'org.springframework.boot:spring-boot-starter-security',
+            'io.micrometer:micrometer-registry-prometheus'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
@@ -45,7 +45,6 @@ dependencies {
             'com.carrotsearch:junit-benchmarks:0.7.2',
             'com.squareup.okhttp3:okhttp:4.0.1',
             'com.squareup.okhttp3:mockwebserver:4.0.1'
-
 }
 
 dependencyManagement {
