--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -18,7 +18,7 @@ com:
         solaris:
           httpmethod: POST
           baseuri: "http://localhost:8080"
-          uri: /oauth/token?grant_type={grant_type}&client_id={client_id}&client_secret={client_secret}
+          uri: /oauth/token
           clientid: login-client
           clientsecret: secret
           granttype: client_credentials
