add integration tests and fix solaris token

--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -7,7 +7,7 @@ com:
       retry:
         count: 2
       auth:
-        provider: uaa
+        provider: solaris
         uaa:
           httpmethod: POST
           baseuri: "http://localhost:8080"
