--- a/integration-tests/docker-compose.yml
+++ b/integration-tests/docker-compose.yml
@@ -1,7 +1,12 @@
 version: '3'
 services:
   gateway:
-    build: ../gateway
+    build:
+      context: ../gateway
+      dockerfile: ./Dockerfile
+      args:
+        PROVIDER: solaris
+        PREFIX: /solaris/
     ports:
       - "8090:8090"
   uaa:
