SBG-08 Credentials from Docker Secret
Changes
----
* To be able to read docker secret file AbstractDockerSecretsProcessor is implemented
* DockerSecretsClientIdProcessor and DockerSecretsClientSecretProcessor are added to read client-id and client-secret from docker secret.
* `com.finleap.solarisgateway.*.clientid` parameters are merged into one `com.finleap.solarisgateway.clientid`
* `com.finleap.solarisgateway.*.clientsecret` parameters are merged into one `com.finleap.solarisgateway.clientsecret`
* docker secret keys path (com.finleap.solarisgateway.docker-secret.bind-path) ,  client-id (com.finleap.solarisgateway.docker-secret.client-id) and client-secret (com.finleap.solarisgateway.docker-secret.client-secret) can be configurable as environment parameters
* client-id / client-secret prioritization order ( first one more prioritized)
  docker secret
  environment properties
  application-{ENV}.yml properties
  application.yml properties (Fall back for development purpose only )
* unit test will be committed separately.

--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -8,24 +8,21 @@ com:
         count: 2
       auth:
         provider: solaris
+        clientid: login-client
+        clientsecret: secret
         uaa:
           httpmethod: POST
           baseuri: "http://localhost:8080"
           uri: /oauth/token
-          clientid: login-client
-          clientsecret: secret
           granttype: client_credentials
         solaris:
           httpmethod: POST
           baseuri: "http://localhost:8080"
           uri: /oauth/token
-          clientid: login-client
-          clientsecret: secret
           granttype: client_credentials
         token:
           expire:
             threshold: 10000
-
       security:
         users:
           - name: solarisUser1
@@ -40,7 +37,10 @@ com:
             password: password
             roles: SOLARIS
             enabled: false
-
+      docker-secret:
+        bind-path: "/run/secrets"
+        client-id: client-id
+        client-secret: client-secret
 ##################################################################
 # Other Properties
 ##################################################################
@@ -56,6 +56,11 @@ management:
   endpoints:
     web:
       exposure:
-        include: health,threaddump,metrics,gateway,info,heapdump,prometheus
+        include: health,threaddump,metrics,gateway,info,heapdump,prometheus,env
+
+# rid of spring security in-memory configuration info logs
+logging:
+  level:
+    org.springframework.context.support.[PostProcessorRegistrationDelegate$BeanPostProcessorChecker]: WARN
 
 
