--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -11,6 +11,9 @@ ARG HTTP_METHOD=POST
 ARG PROVIDER=uaa
 ARG GRANT_TYPE=client_credentials
 ARG PREFIX=/uaa/
+ARG SECRET_PATH=/run/secret
+ARG CLIENT_ID_PATH=client-id
+ARG CLIENT_SECRET_PATH=client-secret
 
 ENV SPRING_PROFILE_ENV=$SPRING_PROFILE
 ENV BASE_URI_ENV=$BASE_URI
@@ -23,6 +26,10 @@ ENV HTTP_METHOD_ENV=$HTTP_METHOD
 ENV PROVIDER_ENV=$PROVIDER
 ENV GRANT_TYPE_ENV=$GRANT_TYPE
 ENV PREFIX_ENV=$PREFIX
+
+ENV SECRET_PATH_ENV=$SECRET_PATH
+ENV CLIENT_ID_PATH_ENV=$CLIENT_ID_PATH
+ENV CLIENT_SECRET_PATH_ENV=$CLIENT_SECRET_PATH
 
 COPY entrypoint.sh /entrypoint.sh
 COPY ${JAR_FILE} app.jar
