--- a/resource-server/Dockerfile
+++ b/resource-server/Dockerfile
@@ -11,5 +11,5 @@ ENV SPRING_PROFILE_ENV=$SPRING_PROFILE
 COPY ${JAR_FILE} app.jar
 ENTRYPOINT ["java","-Dspring.profiles.active=${SPRING_PROFILE_ENV}",\
             "-Dserver.port=${PORT_ENV}",\
-            "-Dcom.finleap.oauth.resource.url=${BASE_URI_ENV}",\
+            "-Dcom.finbyte.oauth.resource.url=${BASE_URI_ENV}",\
             "-jar","/app.jar"]
