--- a/resource-server/src/main/resources/application-dev.properties
+++ b/resource-server/src/main/resources/application-dev.properties
@@ -1,2 +1,2 @@
 server.port=8081
-com.finleap.oauth.resource.url=http://localhost:8080/introspect
+com.finbyte.oauth.resource.url=http://localhost:8080/introspect
