--- a/resource-server/build.gradle
+++ b/resource-server/build.gradle
@@ -14,7 +14,7 @@ apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
-group = 'com.finleap.oauth'
+group = 'com.finbyte.oauth'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 11
 
