Solaris Mock Server Integration

--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -1,19 +1,19 @@
 FROM openjdk:11
 ARG JAR_FILE=build/libs/*.jar
 ARG SPRING_PROFILE=dev
-ARG BASE_URI=http://uaa:8080
+ARG BASE_URI=http://solaris-mock-server:8081
 ARG URI=/oauth/token
-ARG ROUTE_URI=http://resource-server:8081
+ARG ROUTE_URI=http://solaris-mock-server:8081
 ARG CLIENT_ID=login-client
 ARG CLIENT_SECRET=secret
 ARG PORT=8090
 ARG HTTP_METHOD=POST
-ARG PROVIDER=uaa
 ARG GRANT_TYPE=client_credentials
-ARG PREFIX=/uaa/
+ARG PREFIX=/solaris/
 ARG SECRET_PATH=/run/secret
 ARG CLIENT_ID_PATH=client-id
 ARG CLIENT_SECRET_PATH=client-secret
+ARG PROVIDER=mock
 
 ENV SPRING_PROFILE_ENV=$SPRING_PROFILE
 ENV BASE_URI_ENV=$BASE_URI
@@ -23,9 +23,9 @@ ENV CLIENT_ID_ENV=$CLIENT_ID
 ENV CLIENT_SECRET_ENV=$CLIENT_SECRET
 ENV PORT_ENV=$PORT
 ENV HTTP_METHOD_ENV=$HTTP_METHOD
-ENV PROVIDER_ENV=$PROVIDER
 ENV GRANT_TYPE_ENV=$GRANT_TYPE
 ENV PREFIX_ENV=$PREFIX
+ENV PROVIDER_ENV=$PROVIDER
 
 ENV SECRET_PATH_ENV=$SECRET_PATH
 ENV CLIENT_ID_PATH_ENV=$CLIENT_ID_PATH
