--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -36,6 +36,7 @@ ext {
 dependencies {
     compile 'org.springframework.boot:spring-boot-starter-webflux',
             'org.springframework.cloud:spring-cloud-starter-gateway',
+            'org.springframework.boot:spring-boot-starter-data-redis-reactive',
             'org.springframework.boot:spring-boot-starter-log4j2',
             'org.springframework.boot:spring-boot-starter-actuator',
             'org.springframework.boot:spring-boot-starter-security',
